--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">“I strive for two things in design: simplicity and clarity. Great design is born of those two things.”<br/> - Lindon Leader, designer of the FedEx logo.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"></a>
                     <div class="portfolio-caption">
-                        <img src="assets/img/Noise-controller-alpha.jpeg" width="100%">
-                        <h4>Noise Controller</h4>
-                        <p class="text-muted">Web App - User Interface</p>
+                        <a href="http://juarezfrenchdesign.com/Noise-Controller/index.html"><img src="assets/img/Noise-controller-alpha.jpeg" width="100%"></a>
+                        <a href="http://juarezfrenchdesign.com/Noise-Controller/index.html"> <h4>Noise Controller</h4></a>
+                        <a class="text-muted" href="http://juarezfrenchdesign.com/Noise-Controller/index.html">Web App - User Interface</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"></a></div>
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase">About</h2>
-                    <h3 class="text-muted section-subheading">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="text-muted section-subheading">"You have to be willing to learn something about the job before you pick your tools"</h3>
                 </div>
             </div>
             <div class="row">
