Fixed links to NC

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"></a>
                     <div class="portfolio-caption">
-                        <a href="http://juarezfrenchdesign.com/Noise-Controller/index.html"><img src="assets/img/Noise-controller-alpha.jpeg" width="100%"></a>
-                        <a href="http://juarezfrenchdesign.com/Noise-Controller/index.html"> <h4>Noise Controller</h4></a>
-                        <a class="text-muted" href="http://juarezfrenchdesign.com/Noise-Controller/index.html">Web App - User Interface</a>
+                        <a href="http://noise-controller.juarezfrenchdesign.com"><img src="assets/img/Noise-controller-alpha.jpeg" width="100%"></a>
+                        <a href="noise-controller.juarezfrenchdesign.com"> <h4>Noise Controller</h4></a>
+                        <a class="text-muted" href="http://noise-controller.juarezfrenchdesign.com">Web App - User Interface</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"></a></div>
