Deminified CSS and updated NC image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/SCSS/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic">
@@ -71,7 +72,7 @@
             <div class="row">
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"></a>
                     <div class="portfolio-caption">
-                        <a href="http://noise-controller.juarezfrenchdesign.com"><img src="assets/img/Noise-controller-alpha.jpeg" width="100%"></a>
+                        <a href="http://noise-controller.juarezfrenchdesign.com"><img src="./assets/img/portfolio/Noise Controller - Home PageDesaturated.clipular.png" width="100%"></a>
                         <a href="noise-controller.juarezfrenchdesign.com"> <h4>Noise Controller</h4></a>
                         <a class="text-muted" href="http://noise-controller.juarezfrenchdesign.com">Web App - User Interface</a>
                     </div>
