--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body id="page-top">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#page-top">Juarez French Design</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive" aria-expanded="false"
+        <div class="container"><a class="navbar-brand" href="#page-top">Juarez French Development</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto text-uppercase">
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"><span>Welcome To Our Studio!</span></div>
-                <div class="intro-heading text-uppercase"><span>It's Nice To Meet You</span></div>
+                <div class="intro-heading text-uppercase"><span>your vision on the web</span></div>
             </div>
         </div>
     </header>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-lock fa-stack-1x fa-inverse"></i></span>
                     <h4 class="section-heading">Web Security</h4>
-                    <p class="text-muted">Security is a very big deal. &nbsp;We use the most up-to-date best practices, and can help you find a secure host in the cloud, if you don'y want the expense of securing your own server.</p>
+                    <p class="text-muted">Security is a very big deal. &nbsp;We use the most up-to-date best practices, and can help you find a secure host in the cloud, if you don't want the expense of building and securing your own server.</p>
                 </div>
             </div>
         </div>
@@ -77,8 +77,22 @@
                         <a class="text-muted" href="http://noise-controller.juarezfrenchdesign.com">Web App - User Interface</a>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"></a></div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"></a></div>
+                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"></a>
+                    <div class="portfolio-caption">
+                        <a href="https://safe-routes-bw.netlify.app/"><img src="./assets/img/portfolio/Safe_Routes.png" width="100%"></a>
+                        <a href="https://safe-routes-bw.netlify.app"> <h4>Safe Routes</h4></a>
+                        <a class="text-muted" href="https://safe-routes-bw.netlify.app">Web App with Data Science component  Front-end React and Google Maps API</a>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"></a>
+                    <div class="portfolio-caption">
+                        <a href="/"><img src="./assets/img/portfolio/SchematicCapture.png" width="100%"></a>
+                        <a href="https://master.d3bnlq4xzoa0gr.amplifyapp.com/"> <h4>Schematic Capture</h4></a>
+                        <a class="text-muted" href="https://master.d3bnlq4xzoa0gr.amplifyapp.com/">Web and iOS. React, Redux, nodeJS, Postgres, Okta, DropBox API, Cypress and Swift. Front End, Team Lead.</a>
+                    </div>
+                
+                </div>
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"></a></div>
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"></a></div>
                 <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" data-toggle="modal" href="#portfolioModal6"></a></div>
@@ -100,15 +114,15 @@
                             <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <!-- <h4>2009-2011</h4> -->
+                                    <h4 class="subheading">Mark French</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Mark is a full stack web developer with strong front-end upstream operational experience in equity derivatives and the oilfield services sectors.</p>
                                 </div>
                             </div>
                         </li>
-                        <li class="list-group-item timeline-inverted">
+                        <!-- <li class="list-group-item timeline-inverted">
                             <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -116,11 +130,13 @@
                                     <h4 class="subheading">An Agency is Born</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Mark is a full stack web developer with strong front-end upstream operational experience in equity derivatives and the oilfield services sectors. 
+
+                                    </p>
                                 </div>
-                            </div>
+                            </div> -->
                         </li>
-                        <li class="list-group-item">
+                        <!-- <li class="list-group-item">
                             <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -131,8 +147,8 @@
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
-                        </li>
-                        <li class="list-group-item timeline-inverted">
+                        </li> -->
+                        <!-- <li class="list-group-item timeline-inverted">
                             <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -143,10 +159,10 @@
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part<br>&nbsp;Of Our<br>&nbsp;Story!</h4>
+                            <div class="contact-timeline-image">
+                                <p><br><br><br>email: mark.french@juarezfrench.tech<br>GitHub: <br>juarezfrench</p>
                             </div>
                         </li>
                     </ul>
@@ -154,7 +170,7 @@
             </div>
         </div>
     </section>
-    <section id="team" class="bg-light">
+    <!-- <section id="team" class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
@@ -192,7 +208,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="py-5">
         <div class="container">
             <div class="row">
@@ -237,7 +253,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Brand 2018</span></div>
+                <div class="col-md-4"><span class="copyright">Copyright&nbsp;© JuarezFrench Technologies 2020</span></div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
