--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Send us a note and let us know how we can help put your vision on the web.</h3>
                 </div>
             </div>
             <div class="row">
